# EmbeddedMasterLv1

./: .gitignore  README.md
4기/LeeSangHoon/ddd/first_exercise/: CMakeLists.txt  main.c
4기/LeeSangHoon/ddd/first_exercise/common/: common.h  rf_receive_dto_table.h
4기/LeeSangHoon/ddd/first_exercise/entity/radio_frequency/: rf_receiver.c  rf_receiver.h
4기/LeeSangHoon/ddd/first_exercise/radio_frequency/: rf_receiver.c  rf_receiver.h
4기/LeeSangHoon/ddd/first_exercise/service/radio_frequency/: rf_receive_data_scale.c  rf_receive_data_scale.h
4기/LeeSangHoon/ddd/first_exercise/service/radio_frequency/data_transfer_object/: rf_receive_data_transfer_object.c  rf_receive_data_transfer_object.h
4기/LeeSangHoon/ddd/first_exercise/utility/alarm/: custom_alarm.c
4기/LeeSangHoon/ddd/second_exercise/: CMakeLists.txt  main.c
4기/LeeSangHoon/ddd/second_exercise/domain/common/utility/: override_macro.h
4기/LeeSangHoon/ddd/second_exercise/domain/pre_allocated_memory/entity/: pre_allocated_memory.c  pre_allocated_memory.h  pre_allocated_memory_manager.c  pre_allocated_memory_manager.h
4기/LeeSangHoon/ddd/second_exercise/domain/pre_allocated_memory/value_object/: free_memory_table.c  free_memory_table.h  usage_memory_table.c  usage_memory_table.h
4기/LeeSangHoon/ddd/third_exercise/: CMakeLists.txt  main.c
4기/LeeSangHoon/ddd/third_exercise/domain/common/utility/: common.h
4기/LeeSangHoon/ddd/third_exercise/domain/common/utility/alarm/: custom_alarm.c  custom_alarm.h
4기/LeeSangHoon/ddd/third_exercise/domain/common/utility/random/: custom_random.c  custom_random.h
4기/LeeSangHoon/ddd/third_exercise/domain/dc_motor/entity/: dc_motor_control_data.c  dc_motor_control_data.h
4기/LeeSangHoon/ddd/third_exercise/domain/led/entity/: led_control_data.c  led_control_data.h
4기/LeeSangHoon/ddd/third_exercise/domain/radio_frequency/entity/: rf_receiver.c  rf_receiver.h
4기/LeeSangHoon/ddd/third_exercise/domain/radio_frequency/service/: rf_receiver_service.c  rf_receiver_service.h
4기/LeeSangHoon/ddd/third_exercise/domain/servo_motor/entity/: servo_motor_control_data.c  servo_motor_control_data.h
4기/LeeSangHoon/ddd/third_exercise/domain/wifi/entity/: wifi_receive.c  wifi_receive.h
4기/LeeSangHoon/ddd/third_exercise/domain/wifi/service/: wifi_receive_service.c  wifi_receive_service.h
5기/GwangseonEo/homework/6_week/camera_domain/: CMakeLists.txt
5기/GwangseonEo/homework/6_week/camera_domain/main/: add_on_lib.c  add_on_lib.h  main.c
5기/GwangseonEo/homework/6_week/camera_domain/protocol/: protocol.h  protocol_call_table.h  protocol_call_table_mapper.h  protocol_handler.c  protocol_handler.h
5기/GwangseonEo/homework/6_week/camera_domain/protocol/camera/: camera.h  camera_call_table.h  camera_call_table_mapper.h  camera_handler.c  camera_handler.h
5기/GwangseonEo/homework/6_week/camera_domain/receiver/: receiver.c
5기/lecture/ddd/first/: CMakeLists.txt  main.c
5기/lecture/ddd/first/command/: command.c  command.h  command_call_table.h  command_call_table_mapper.h  command_handler.c  command_handler.h
5기/lecture/ddd/first/data_structure/queue/: queue.c  queue.h  queue_request.h
5기/lecture/ddd/first/member/controller/: member_command.c  member_command.h  member_command_call_table.h  member_command_call_table_mapper.h  member_command_handler.c  member_command_handler.h
5기/lecture/ddd/first/member/entity/: member.c  member.h
5기/lecture/ddd/first/member/repository/: member_repository_command.h  member_repository_command_table.h  member_repository_command_table_mapper.h  member_repository_handler.c  member_repository_handler.h
5기/lecture/ddd/first/member/service/: member_service_command.h  member_service_command_table.h  member_service_command_table_mapper.h  member_service_handler.c  member_service_handler.h
5기/lecture/ddd/first/member/service/request/: member_request.c  member_request.h
5기/lecture/ddd/first/order/controller/: order_command.c  order_command.h  order_command_call_table.h  order_command_call_table_mapper.h  order_command_handler.c  order_command_handler.h
5기/lecture/ddd/first/order/entity/: order.c  order.h
5기/lecture/ddd/first/order/repository/: order_repository_command.h  order_repository_command_table.h  order_repository_command_table_mapper.h  order_repository_handler.c  order_repository_handler.h
5기/lecture/ddd/first/order/service/: order_service_command.h  order_service_command_table.h  order_service_command_table_mapper.h  order_service_handler.c  order_service_handler.h
5기/lecture/ddd/first/order/service/request/: order_request.c  order_request.h
5기/lecture/ddd/first/order/service/response/: order_response.c  order_response.h
5기/lecture/ddd/first/product/: prepare.txt
5기/lecture/ddd/first/product/controller/: product_command.c  product_command.h  product_command_call_table.h  product_command_call_table_mapper.h  product_command_handler.c  product_command_handler.h
5기/lecture/ddd/first/product/entity/: product.c  product.h
5기/lecture/ddd/first/product/repository/: product_repository_command.h  product_repository_command_table.c  product_repository_command_table.h  product_repository_command_table_mapper.h  product_repository_handler.c  product_repository_handler.h
5기/lecture/ddd/first/product/service/: product_service_command.h  product_service_command_table.h  product_service_command_table_mapper.h  product_service_handler.c  product_service_handler.h
5기/lecture/ddd/first/product/service/request/: product_request.c  product_request.h
5기/lecture/ddd/first/product/service/response/: product_response.c  product_response.h
5기/lecture/ddd/first/session/: session.c  session.h
5기/lecture/ddd/first/ui/console/: user_input.h
5기/lecture/ddd/first/utility/ui/console/: input_process.c  input_process.h
5기/lecture/sixth/ddd/: CMakeLists.txt
5기/lecture/sixth/ddd/command/: command.h  command_call_table.h  command_call_table_mapper.h  command_handler.c
5기/lecture/sixth/ddd/main/: main.c
5기/lecture/sixth/ddd/member/: member.c  member.h  member_handler.c  member_handler.h
homework/: new_account.c  pof.c  prepare.txt
newbie_problem/1/: 1.c  (+14 more)
(+794 files in other folders)
